# mg-miniapp

./: .clangd  .gitignore  CMakeLists.txt  build_kokkos.sh  build_mac.sh  compile_commands.json  mg3d_ippl.cpp  mg3d_kokkos.cpp  mg3d_kokkos_AI.cpp  miniapp_multigrid_preconditioner_poisson3d.cpp  run_benchmark.sh
